--- a/index.html
+++ b/index.html
@@ -22,6 +22,42 @@
 
         </div>
     </div>
+    <header class="header">
+        <div class="header__header-column">
+            <h1 class="header__title">Chats</h1>
+        </div>
+        <div class="header__header-column">
+            <span class="header__icon">
+                <i class="fas fa-search"></i>
+            </span>
+            <span class="header__icon">
+                <i class="far fa-comment"></i>
+            </span>
+            <span class="header__icon">
+                <i class="fas fa-cog"></i>
+            </span>
+
+        </div>
+
+    </header>
+    <nav class="nav">
+        <ui class="nav__list">
+            <li class="nav__list-item"><a href="freinds.html" class="nav__list-link">
+                    <i class="far fa-user"></i></a>
+            </li>
+            <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                    <i class="fas fa-comment"></i></a>
+            </li>
+            <li class="nav__list-item"><a href="find.html" class="nav__list-link">
+                    <i class="fas fa-search"></i>
+                </a>
+            </li>
+            <li class="nav__list-item"><a href="more.html" class="nav__list-link">
+                    <i class="fas fa-ellipsis-h"></i>
+                </a>
+            </li>
+        </ui>
+    </nav>
 </body>
 
 </html>
